 * Fix: Image and Document multiple upload update forms now correctly use the progress button (longrunning) behaviour when clicked (Loveth Omokaro)
 * Fix: Prevent audit log report from failing on missing models (Andy Chosak)
 * Fix: Ensure that the privacy collection privacy edit button is styled as a button (Jatin Kumar)
 * Docs: Add code block to make it easier to understand contribution docs (Suyash Singh)
 * Docs: Add new "Icons" page for icons customisation and reuse across the admin interface (Coen van der Kamp)
 * Docs: Fix broken formatting for MultiFieldPanel / FieldRowPanel permission kwarg docs (Matt Westcott)
 * Docs: Add helpful troubleshooting links and refine wording for getting started with development (Loveth Omokaro)
 * Docs: Ensure search autocomplete overlay on mobile does not overflow the viewport (Ayman Makroo)
 * Docs: Improve documentation for InlinePanel (Vallabh Tiwari)
 * Maintenance: Removed features deprecated in Wagtail 3.0 and 4.0 (Matt Westcott)
 * Maintenance: Update djhtml (html formatting) library to v 1.5.2 (Loveth Omokaro)
 * Maintenance: Re-enable `strictPropertyInitialization` in tsconfig (Thibaud Colas)
 * Maintenance: Refactor accessibility checker userbar item (Albina Starykova)
 * Maintenance: Removed unused `Page.get_static_site_paths` method (Yosr Karoui)
 * Maintenance: Provisional Django 5.0 compatibility fixes (Sage Abdullah)
 * Maintenance: Add unit tests for `CollapseAll` and `MinimapItem` components (Albina Starykova)
 * Maintenance: Code quality fixes (GLEF1X)
 * Maintenance: Refactor image / document / snippet usage views into a shared generic view (Sage Abdullah)
 * Maintenance: Rename the Stimulus `AutoFieldController` to the less confusing `SubmitController` (Loveth Omokaro)
 * Maintenance: Replace `script` tags with `template` tag for image/document bulk uploads (Rishabh Kumar Bahukhandi)
 * Maintenance: Remove unneeded float styles on 404 page (Fabien Le Frapper)