@@ -37,6 +37,7 @@ depth: 1
  * Image and Document multiple upload update forms now correctly use the progress button (longrunning) behaviour when clicked (Loveth Omokaro)
  * Prevent audit log report from failing on missing models (Andy Chosak)
  * Ensure that the privacy collection privacy edit button is styled as a button (Jatin Kumar)
+ * Fix page/snippet cannot proceed a `GroupApprovalTask` if it's locked by someone outside of the group (Sage Abdullah)
 
 ### Documentation
 
